<resources>
    <string name="app_name">Share Photo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="accept">Accept</string>
    <string name="history">Image history</string>
    <string name="add">Add button</string>
    <string name="thumbnail_edit_text">Write something!...</string>
    <string name="thumbnail">thumbnail.</string>
    <string name="location">Add location</string>
    <string name="place">place</string>
    <string name="share">Share in</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="finalize">Finalize</string>
    <string name="imageURL">imageURL</string>

    <string name="facebook_app_id">255996731629036</string>
    <string name="facebook_login_protocol_scheme">fb255996731629036</string>
    <string name="email">Email</string>
</resources>
