<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/Registration"
        android:text="@string/registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/mEmailFieldRegistration"
        android:background="@layout/edit_border_format"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Registration"
        android:gravity="center"
        android:hint="@string/username"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/mPasswordFieldRegistration"
        android:background="@layout/edit_border_format"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/password"
        android:layout_below="@id/mEmailFieldRegistration"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/mAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mPasswordFieldRegistration"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/accept" />

</RelativeLayout>