<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".PictureConfigurationActivity">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/thumbnail"
        app:srcCompat="@drawable/baby_groot"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/write_something"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:background="@null"
        android:hint="@string/thumbnail_edit_text"
        android:layout_alignParentRight="true"
        android:inputType="text" />

    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_below="@id/thumbnail"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/location"
        android:layout_below="@id/line_separator"
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="12dp"/>

    <ImageView
        android:id="@+id/place"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="108dp"
        app:srcCompat="@drawable/place"
        android:contentDescription="@string/place"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="129dp" />

    <View
        android:id="@+id/line_separator_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/location"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/share"
        android:layout_below="@id/line_separator_2"
        android:text="@string/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:padding="12dp"
        android:text="@string/facebook"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/facebook_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/facebook"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp" />
    
</RelativeLayout>